--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,7 +67,7 @@ dependencies {
 //    implementation 'com.jakewharton.rxbinding3:rxbinding-viewpager:3.0.0-alpha1'
     implementation 'com.jakewharton.rxbinding3:rxbinding-material:3.0.0-alpha1'
 
-    // Retorfit 2
+    // Retrofit 2
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
