--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
 
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+
     // Room
     implementation 'androidx.room:room-runtime:2.1.0-alpha02'
     kapt 'androidx.room:room-compiler:2.1.0-alpha02'
