--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,11 +30,11 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha04'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha04'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'com.google.android.material:material:1.1.0-alpha04'
+    implementation 'com.google.android.material:material:1.1.0-alpha05'
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-core:2.23.4'
     testImplementation 'org.mockito:mockito-inline:2.23.4'
@@ -51,13 +51,13 @@ dependencies {
     testImplementation 'androidx.room:room-testing:2.1.0-alpha06'
 
     //Dagger 2
-    implementation 'com.google.dagger:dagger:2.19'
-    kapt 'com.google.dagger:dagger-compiler:2.19'
+    implementation 'com.google.dagger:dagger:2.21'
+    kapt 'com.google.dagger:dagger-compiler:2.21'
     //Dagger 2 Android
-    implementation 'com.google.dagger:dagger-android:2.19'
-    kapt 'com.google.dagger:dagger-android-processor:2.19'
+    implementation 'com.google.dagger:dagger-android:2.21'
+    kapt 'com.google.dagger:dagger-android-processor:2.21'
     //Dagger 2 Android Support
-    implementation 'com.google.dagger:dagger-android-support:2.19'
+    implementation 'com.google.dagger:dagger-android-support:2.21'
 
     // Rx
     implementation 'io.reactivex.rxjava2:rxjava:2.2.7'
