--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,10 +35,10 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha04'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha4'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha5'
     implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha04'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'com.google.android.material:material:1.1.0-alpha05'
+    implementation 'com.google.android.material:material:1.1.0-alpha06'
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-core:2.23.4'
     testImplementation 'org.mockito:mockito-inline:2.23.4'
@@ -49,10 +49,10 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
 
     // Room
-    implementation 'androidx.room:room-runtime:2.1.0-alpha06'
-    kapt 'androidx.room:room-compiler:2.1.0-alpha06'
-    implementation 'androidx.room:room-rxjava2:2.1.0-alpha06'
-    testImplementation 'androidx.room:room-testing:2.1.0-alpha06'
+    implementation 'androidx.room:room-runtime:2.1.0-beta01'
+    kapt 'androidx.room:room-compiler:2.1.0-beta01'
+    implementation 'androidx.room:room-rxjava2:2.1.0-beta01'
+    testImplementation 'androidx.room:room-testing:2.1.0-beta01'
 
     //Dagger 2
     implementation 'com.google.dagger:dagger:2.21'
@@ -69,16 +69,16 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
 
     // RxBinding
-    implementation 'com.jakewharton.rxbinding3:rxbinding:3.0.0-alpha1'
-    implementation 'com.jakewharton.rxbinding3:rxbinding-core:3.0.0-alpha1'
-    implementation 'com.jakewharton.rxbinding3:rxbinding-appcompat:3.0.0-alpha1'
+    implementation 'com.jakewharton.rxbinding3:rxbinding:3.0.0-alpha2'
+    implementation 'com.jakewharton.rxbinding3:rxbinding-core:3.0.0-alpha2'
+    implementation 'com.jakewharton.rxbinding3:rxbinding-appcompat:3.0.0-alpha2'
 //    implementation 'com.jakewharton.rxbinding3:rxbinding-drawerlayout:3.0.0-alpha1'
 //    implementation 'com.jakewharton.rxbinding3:rxbinding-leanback:3.0.0-alpha1'
-    implementation 'com.jakewharton.rxbinding3:rxbinding-recyclerview:3.0.0-alpha1'
+    implementation 'com.jakewharton.rxbinding3:rxbinding-recyclerview:3.0.0-alpha2'
 //    implementation 'com.jakewharton.rxbinding3:rxbinding-slidingpanelayout:3.0.0-alpha1'
-    implementation 'com.jakewharton.rxbinding3:rxbinding-swiperefreshlayout:3.0.0-alpha1'
+    implementation 'com.jakewharton.rxbinding3:rxbinding-swiperefreshlayout:3.0.0-alpha2'
 //    implementation 'com.jakewharton.rxbinding3:rxbinding-viewpager:3.0.0-alpha1'
-    implementation 'com.jakewharton.rxbinding3:rxbinding-material:3.0.0-alpha1'
+    implementation 'com.jakewharton.rxbinding3:rxbinding-material:3.0.0-alpha2'
 
     // Retrofit 2
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
