--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,25 +34,25 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha04'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha5'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha04'
+    implementation 'androidx.appcompat:appcompat:1.1.0-beta01'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta1'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha06'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'com.google.android.material:material:1.1.0-alpha06'
+    implementation 'com.google.android.material:material:1.1.0-alpha07'
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-core:2.23.4'
     testImplementation 'org.mockito:mockito-inline:2.23.4'
     testImplementation "org.robolectric:robolectric:4.0.2"
-    androidTestImplementation 'androidx.test:runner:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
 
     // Room
-    implementation 'androidx.room:room-runtime:2.1.0-beta01'
-    kapt 'androidx.room:room-compiler:2.1.0-beta01'
-    implementation 'androidx.room:room-rxjava2:2.1.0-beta01'
-    testImplementation 'androidx.room:room-testing:2.1.0-beta01'
+    implementation 'androidx.room:room-runtime:2.1.0-rc01'
+    kapt 'androidx.room:room-compiler:2.1.0-rc01'
+    implementation 'androidx.room:room-rxjava2:2.1.0-rc01'
+    testImplementation 'androidx.room:room-testing:2.1.0-rc01'
 
     //Dagger 2
     implementation 'com.google.dagger:dagger:2.21'
@@ -64,7 +64,7 @@ dependencies {
     implementation 'com.google.dagger:dagger-android-support:2.21'
 
     // Rx
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.7'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.8'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
 
@@ -84,7 +84,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.14.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.14.1'
 
     // Gson
     implementation 'com.google.code.gson:gson:2.8.5'
